--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class="navbar">
                 <a href="#home" class="active">Home</a>
                 <a href="#about">About</a>
-                <a href="#service">Services</a>
+                <a href="#services">Services</a>
                 <a href="#portfolio">Portfolio</a>
                 <a href="#contact">Contact</a>
             </nav>
@@ -59,7 +59,119 @@
             <div class="about-img">
                 <img src="img/img_portada1.jpg" alt="">
             </div>
+
+            <div class="about-content">
+                <h2 class="heading">About <span>Me</span></h2>
+                <h3>Frontend Developer</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Repellat temporibus tempore voluptatum consectetur quibusdam 
+                    quos commodi officia asperiores exercitationem animi quo 
+                    expedita sint, laborum suscipit. Consequuntur quo adipisci 
+                    dolorum fuga.</p>
+                    <a href="#" class="btn">Read More</a>
+            </div>
         </section>
+
+        <!--Services-->
+
+        <section class="services" id="services">
+            <h2 class="heading">Our <span>Services</span></h2>
+
+            <div class="services-container">
+                <div class="services-box">
+                    <i class='bx bx-code-alt' ></i>
+                    <h3>Web Developement</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Dolor voluptatem non obcaecati veritatis accusamus 
+                        autem, sit temporibus! Magni</p>
+                        <a href="#" class="btn">Read More</a>
+                </div>
+
+                <div class="services-box">
+                    <i class='bx bx-wifi' ></i>
+                    <h3>IT & Network Services</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Dolor voluptatem non obc</p>
+                        <a href="#" class="btn">Read More</a>
+                </div>
+
+                <div class="services-box">
+                    <i class='bx bxs-webcam' ></i>
+                    <h3>Security Systems</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Dolor voluptatem non obcaecati veritatis accusamus 
+                        autem, sit temporibus! Magni</p>
+                        <a href="#" class="btn">Read More</a>
+                </div>
+
+            </div>
+
+        </section>
+
+        <!--portfolio-->
+
+        <section class="portfolio" id="portfolio">
+            <h2 class="heading">Latest <span>Project</span></h2>
+
+            <div class="portfolio-container">
+                <div class="portfolio-box">
+                    <img src="img/desk.jpg" alt="">
+                    <div class="portfolio-layer">
+                        <h4>Web Design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quae autem debitis!</p>
+                        <a href="#"><i class='bx bxl-github'></i></a>
+                    </div>
+                </div>
+
+                <div class="portfolio-box">
+                    <img src="img/desk.jpg" alt="">
+                    <div class="portfolio-layer">
+                        <h4>Web Design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quae autem debitis!</p>
+                        <a href="#"><i class='bx bxl-github'></i></a>
+                    </div>
+                </div>
+
+                <div class="portfolio-box">
+                    <img src="img/desk.jpg" alt="">
+                    <div class="portfolio-layer">
+                        <h4>Web Design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quae autem debitis!</p>
+                        <a href="#"><i class='bx bxl-github'></i></a>
+                    </div>
+                </div>
+
+                <div class="portfolio-box">
+                    <img src="img/desk.jpg" alt="">
+                    <div class="portfolio-layer">
+                        <h4>Web Design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quae autem debitis!</p>
+                        <a href="#"><i class='bx bxl-github'></i></a>
+                    </div>
+                </div>
+
+                <div class="portfolio-box">
+                    <img src="img/desk.jpg" alt="">
+                    <div class="portfolio-layer">
+                        <h4>Web Design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quae autem debitis!</p>
+                        <a href="#"><i class='bx bxl-github'></i></a>
+                    </div>
+                </div>
+
+                <div class="portfolio-box">
+                    <img src="img/desk.jpg" alt="">
+                    <div class="portfolio-layer">
+                        <h4>Web Design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione quae autem debitis!</p>
+                        <a href="#"><i class='bx bxl-github'></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        </section>
+
 
 
         <!--js -->
