--- a/index.html
+++ b/index.html
@@ -170,11 +170,44 @@
             </div>
         </section>
 
+        <!--Contact-->
+
+        <section class="contact" id="contact">
+            <h2 class="heading">Contact <span>Me!</span></h2>
+
+            <form action="#">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Email">
+                </div>
+
+                <div class="input-box">
+                    <input type="number" placeholder="Cell Number">
+                    <input type="text" placeholder="Email Subject">
+                </div>
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn">
+            </form>
         </section>
 
+        
+    </section>
 
+    
+    <!--Footer-->
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2023 by MySelf | All Rights Reserved.</p>
+        </div>
+
+        <div class="footer-iconTop"><a href="#"><i class='bx bx-up-arrow-alt bx-flip-horizontal' ></i></a></div>
+    </footer>
+
+    <!--Scroll reveal-->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
         <!--js -->
+        <script src="script.js"></script>
     </body>
 </html>
 
